--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DiceRoller</string>
+    <string name="roll">Roll</string>
+    <string name="textoResultado">Dice Rolled!</string>
+    <string name="count_up">Count Up</string>
 </resources>
